@startuml
class Program {
}
class Position {
    + left : int
    + top : int
}
class Snake {
    + {static} _bodyPattern : char = '*'
    + Lenght : int <<get>> <<set>>
    + IfOverlapped(currentPos:Position) : bool
    + SetIntitialPosition() : Position
    + CleanUp() : void
}
class Food {
    + Position : Position? <<get>> <<set>>
}
class "List`1"<T> {
}
Snake --> "Points<Position>" "List`1"
Food --> "Rnd" Random
@enduml
